新建房地产(管理员)接口
