# application/routers/api/v1/realEstate.go
@@ -1,0 +1,58 @@
+/**
+ * @Author: 夜央 Oh oh oh oh oh oh (https://github.com/togettoyou)
+ * @Email: zoujh99@qq.com
+ * @Date: 2020/3/10 4:43 下午
+ * @Description: 房地产信息相关接口
+ */
+package v1
+
+import (
+	"bytes"
+	"encoding/json"
+	"fmt"
+	"github.com/gin-gonic/gin"
+	bc "github.com/togettoyou/blockchain-real-estate/application/blockchain"
+	"github.com/togettoyou/blockchain-real-estate/application/pkg/app"
+	"net/http"
+	"strconv"
+)
+
+type RealEstateRequestBody struct {
+	AccountId   string  `json:"accountId"`   //操作人ID
+	Proprietor  string  `json:"proprietor"`  //所有者(业主)(业主AccountId)
+	TotalArea   float64 `json:"totalArea"`   //总面积
+	LivingSpace float64 `json:"livingSpace"` //生活空间
+}
+
+// @Summary 新建房地产(管理员)
+// @Param realEstate body RealEstateRequestBody true "realEstate"
+// @Produce  json
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
+// @Router /api/v1/createRealEstate [post]
+func CreateRealEstate(c *gin.Context) {
+	appG := app.Gin{C: c}
+	body := new(RealEstateRequestBody)
+	//解析Body参数
+	if err := c.ShouldBind(body); err != nil {
+		appG.Response(http.StatusBadRequest, "失败", fmt.Sprintf("参数出错%s", err.Error()))
+		return
+	}
+	var bodyBytes [][]byte
+	bodyBytes = append(bodyBytes, []byte(body.AccountId))
+	bodyBytes = append(bodyBytes, []byte(body.Proprietor))
+	bodyBytes = append(bodyBytes, []byte(strconv.FormatFloat(body.TotalArea, 'E', -1, 64)))
+	bodyBytes = append(bodyBytes, []byte(strconv.FormatFloat(body.LivingSpace, 'E', -1, 64)))
+	//调用智能合约
+	resp, err := bc.ChannelQuery("createRealEstate", bodyBytes)
+	if err != nil {
+		appG.Response(http.StatusInternalServerError, "失败", err.Error())
+		return
+	}
+	var data map[string]interface{}
+	if err = json.Unmarshal(bytes.NewBuffer(resp.Payload).Bytes(), &data); err != nil {
+		appG.Response(http.StatusInternalServerError, "失败", err.Error())
+		return
+	}
+	appG.Response(http.StatusOK, "成功", data)
+}
