# application/routers/router.go
@@ -28,6 +28,7 @@ func InitRouter() *gin.Engine {
 	{
 		apiV1.GET("/hello", v1.Hello)
 		apiV1.POST("/queryAccountList", v1.QueryAccountList)
+		apiV1.POST("/createRealEstate", v1.CreateRealEstate)
 	}
 	return r
 }
